Universal Weathering
Made the Weathering system compatible with any block.

DataGen a few blockstates

Added Cracked Tuff Brick blocks